<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="swim.cw1.Main4Activity"
    android:rowCount="10"
    android:columnCount="2">

    <Switch
        android:id="@+id/toastSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enableCloseToast"
        android:onClick="toggleToast"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_column="0"
        android:layout_row="3"
        android:inputType="textPersonName"
        />

    <RadioGroup android:orientation="horizontal"
        android:layout_column="0"
        android:layout_row="1"
        android:id="@+id/radioSex">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/name"
        android:labelFor="@id/nameInput"/>

</GridLayout>
